fix textarea on firefox

--- a/packages/rocketchat-theme/client/imports/components/message-box.css
+++ b/packages/rocketchat-theme/client/imports/components/message-box.css
@@ -101,6 +101,7 @@
 		width: 100%;
 		max-height: 155px;
 		padding: 0;
+		height: 14px;
 
 		resize: none;
 
